16042025 v2
FreeDaysBookingService updateFreeDays and deleteFreeDays finally finished